finished user dashboard styling. overflow shenanigans should be fixed by username charsize limits. needs plumbing for linkage

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -115,6 +115,9 @@
     margin-left: 20%;
     width: 60%;
     padding: 0px;
+    min-height: 100vh;
+    max-height: 100vh;
+    overflow-y: scroll;
 }
 
 .secondary-column{
@@ -122,12 +125,18 @@
     margin: 0 0 0 -80%;
     width: 20%;
     clear: none;
+    overflow-y: scroll;
+    min-height: 100vh;
+    max-height: 100vh;
 }
 
 .tertiary-column{
     float: right;
     width: 20%;
     clear: none;
+    overflow-y: scroll;
+    min-height: 100vh;
+    max-height: 100vh;
 }
 
 .chat-name-container{
@@ -137,7 +146,7 @@
   border-color: rgba(50,50,50,0.9);
   border-style: solid;
   height: 40px;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .chat-name-container:hover{
@@ -146,15 +155,14 @@
 }
 
 .chat-name-container:first-child{
-  margin-top: 85px;
+  margin-top: 34px;
 }
 
 .active-chat-sidebar{
-  margin-top: -50px;
+  margin-top: 0px;
   background-color: rgba(200,200,200,0.6);
   border-right: 2px solid rgba(30,30,30,0.9);
   border-left: 2px solid rgba(30,30,30,0.9);
-  min-height: 113vh;
 }
 
 .chat-name{
@@ -168,8 +176,7 @@
 #active-users-label{
   font-size: 3em;
   color: rgb(150,0,0);
-  padding-top: 75px;
-  padding-left: 10px;
+  padding-top: 15px;
   text-align:center;
   text-decoration: underline;
 }
@@ -189,6 +196,7 @@
   background-color: rgba(200,200,200,0.4);
   padding: 5px;
   min-height: 45px;
+  max-height: 45px;
 }
 
 .chat-user-container:hover{
@@ -203,7 +211,8 @@
   text-align: left;
   float: left;
   display: inline-block;
-  padding: 10px 5px 10px 5px;
+  padding: 5px 0px 0px 4px;
+  max-width: 95%;
   overflow: hidden;
 }
 
